--- a/public/locales/kr.json
+++ b/public/locales/kr.json
@@ -135,7 +135,7 @@
   "createTitle2": "추가하신 토큰 비율로 이 풀의 가격을 설정합니다.",
   "createTitle3":  "비율에 만족하신다면 Supply를 눌러 살펴보십시오.",
   "connectWallet": "지갑 연결",
-  "platformInfo": "Oriswap은 ETHF 생태계 체인을 기반으로한 새로운 DEX 입니다. 100% 탈중앙화 된 채굴 환경으로, 우리 는 새로운 자산을 선도적으로 지원하기 위해 LP, 단일 코인, NFT 채굴을 지원합니다.",
+  "platformInfo": "Diswap은 DisChain 기반의 새로운 탈중앙화 거래소(DEX)입니다. 100% 탈중앙화된 채굴 생태계를 통해 LP 채굴, 단일 채굴 및 NFT 채굴을 지원하여 새로운 자산을 효과적으로 지원합니다.",
   "whitepaper":  "Whitepaper",
   "audit":  "Audit",
   "wechatAssistant": "위챗문의",
@@ -151,7 +151,7 @@
   "dayMode":  "데이 모드",
   "lpProperty":  "실시간 예치규모",
   "currentPrice":  "현재 가격",
-  "dogBalance": "ORI잔액",
+  "dogBalance": "DIS잔액",
   "amountToBeRewarded":  "리워드 예정 금액",
   "totalRepurchaseDestruction":  "바이백 대기금",
   "realTimeDeflationRate":  "실시간 디플레이션율",
@@ -166,13 +166,13 @@
   "totalTrans":  "누적 거래규모",
   "24hoursFee":  "24시간 수수료",
   "totalFee": "누적 수수료",
-  "dogUseSenarios":"ORI활용 사례",
+  "dogUseSenarios":"DIS활용 사례",
   "repurchase":  "바이백",
   "repurchaseAndDestory": "바이백 후 소각 대기금",
   "rewards":  "리워드",
-  "rewardsToPeople":  "ORI 스테이킹 시 리워드",
+  "rewardsToPeople":  "DIS 스테이킹 시 리워드",
   "communityVote": "커뮤니티 제안 및 투표",
-  "dogAuditAgency":  "ORI 심사기관",
+  "dogAuditAgency":  "DIS 심사기관",
   "view":  "보기",
   "rewardedAmount":  "리워드 금액",
   "dayOfRewardAmount": "오늘의 리워드 금액",
@@ -199,13 +199,13 @@
   "tips": "안내",
   "unstaked": "스테이킹 해제",
   "pending_tx":  "거래를 처리중입니다. 잠시 후 확인해주세요.",
-  "dogDetail": "ORI 세부사항",
-  "applyDogToken":  "ORI 수령하기",
+  "dogDetail": "DIS 세부사항",
+  "applyDogToken":  "DIS 수령하기",
   "checkAddreeSupply":  "주소에 신청 가능한 토큰이 있는지 체크해주세요.",
   "check": "체크하기",
-  "dogPrice": "ORI가격",
+  "dogPrice": "DIS가격",
   "totalSupply": "총 공급량",
-  "getSupplyDesc":  "주소를 입력하여 ORI를 수령하세요. 만약 이 주소에 수령가능한 ORI가 있다면 제출 시 토큰이 전송됩니다.",
+  "getSupplyDesc":  "주소를 입력하여 DIS를 수령하세요. 만약 이 주소에 수령가능한 DIS가 있다면 제출 시 토큰이 전송됩니다.",
   "walletAddress": "지갑 주소",
   "noSupply":  "이 주소에 신청 가능한 토큰이 없습니다.",
   "receive": "수령하기",
@@ -233,7 +233,7 @@
   "lpRules2":  "수익 규정: LP채굴ZONE의 채굴량이 전체 토큰 채굴량의 95%입니다. 모든 풀의 채굴 난이도는 해당 풀의 전날 수수료 규모에 따라 결정됩니다. 자세한 정보는 '모듈' 팝업창을 참고해주세요.",
   "lpRules3": "상폐 규정: LP풀의 일일 거래 수수료가 며칠 연속으로 100USD이하일 경우 상장이 취소될 수 있습니다.",
   "lpRules4": "리워드 대상: 새로운 프로젝트 상장 첫 주 동안 2-3배의 리워드를 제공합니다. ",
-  "lpRules5":  "이메일 연락처: OriSwapfan@gmail.com",
+  "lpRules5":  "이메일 연락처: Diswapfan@gmail.com",
   "singleTitle":  "프로젝트 상장 신청서",
   "singleRules1": "상장 규정: 신청서 기입 후 프로젝트 컨트랙트 주소, 프로젝트 소개, 로고 및 주요 정보를 제출해주시면 24시간 내에 단일 코인ZONE에 상장됩니다.",
   "singleRules2": "채굴 규정: 아래 3가지 조항을 모두 만족하는 풀은 다음날 단일 채굴 권한이 오픈됩니다. ",
@@ -257,19 +257,19 @@
   "avaliable":  "사용 가능 잔액",
   "nftavaliable":  "사용 가능 NFT",
   "feeTip": "해당 거래가 시간 내에 완성될 때 발생하는 수수료",
-  "dogData": "ORI 데이터",
-  "dogTotalSupply":  "ORI 총 공급량",
-  "dogTotalDestory": "ORI 총 소각량",
-  "dogNewBlock": "새로운 ORI 블록",
+  "dogData": "DIS 데이터",
+  "dogTotalSupply":  "DIS 총 공급량",
+  "dogTotalDestory": "DIS 총 소각량",
+  "dogNewBlock": "새로운 DIS 블록",
   "weekOfRewardAmount": "이번주 리워드 예정 금액",
-  "stakeLockInfo":  "ORI 예치 기간은 30일입니다.",
-  "dogeEarn":  "ORIE 수익",
+  "stakeLockInfo":  "DIS 예치 기간은 30일입니다.",
+  "dogeEarn":  "DISE 수익",
   "stakeRecord":  "스테이킹 기록",
   "stakeDate":  "스테이킹 기간",
   "stakeAmount": "예치 수량",
   "unlockDate": "언락 예정일",
-  "dogRebug":  "ORI 바이백 및 소각",
-  "rebuyPrice":  "실시간 ORI가격",
+  "dogRebug":  "DIS 바이백 및 소각",
+  "rebuyPrice":  "실시간 DIS가격",
   "totalRebuyDestory": "총 바이백 및 소각 규모",
   "stakedAndLocked":  "예치됨",
   "unLocked": "언락됨",
