--- a/public/locales/zh-CN.json
+++ b/public/locales/zh-CN.json
@@ -135,7 +135,7 @@
   "createTitle2": "你添加的代币比例将设置该池子的价格",
   "createTitle3": "对比例满意后点击Supply查看",
   "connectWallet": "连接钱包",
-  "platformInfo": "OriSwap 是基于ETHF生态链全新的 DEX，100%去中心化的挖矿生态，致力于扶持新资产，为新资产开通LP挖矿、单币挖矿以及NFT挖矿。ETHF继续保留POW，是全球第一条以太坊转POS的分叉链。",
+  "platformInfo": "Diswap是基于DisChain的全新去中心化交易所，100%去中心化的挖矿生态，致力于扶持新资产，为新资产开通LP挖矿、单币挖矿以及NFT挖矿。",
   "whitepaper": "白皮书",
   "audit": "审计",
   "wechatAssistant": "微信小助手",
@@ -151,7 +151,7 @@
   "dayMode": "白天模式",
   "lpProperty": "当前流动性质押",
   "currentPrice": "当前价格",
-  "dogBalance": "ORI余额",
+  "dogBalance": "DIS余额",
   "amountToBeRewarded": "待奖励总金额",
   "totalRepurchaseDestruction": "待回购手续费",
   "realTimeDeflationRate": "实时通缩率",
@@ -166,13 +166,13 @@
   "totalTrans": "累计交易总额",
   "24hoursFee": "24小时手续费",
   "totalFee": "累计手续费",
-  "dogUseSenarios": "ORI使用场景",
+  "dogUseSenarios": "DIS使用场景",
   "repurchase": "回购",
   "repurchaseAndDestory": "用于回购并销毁",
   "rewards": "奖励",
-  "rewardsToPeople": "给质押ORI的人奖励",
+  "rewardsToPeople": "给质押DIS的人奖励",
   "communityVote": "社区提议及投票",
-  "dogAuditAgency": "ORI审计机构",
+  "dogAuditAgency": "DIS审计机构",
   "view": "查看",
   "rewardedAmount": "已奖励金额",
   "dayOfRewardAmount": "当日奖励金额",
@@ -199,13 +199,13 @@
   "tips": "提示",
   "unstaked": "解押",
   "pending_tx": "您的交易正在处理中，请等待确认!",
-  "dogDetail": "你的ORI明细",
-  "applyDogToken": "申领ORI代币",
+  "dogDetail": "你的DIS明细",
+  "applyDogToken": "申领DIS代币",
   "checkAddreeSupply": "检查地址是否有可申请的代币",
   "check": "检查",
-  "dogPrice": "ORI价格",
+  "dogPrice": "DIS价格",
   "totalSupply": "总供应量",
-  "getSupplyDesc": "输入地址，触发ORI申领。如果该地址有任何可申领的ORI，则在提交时将向其发送代币。",
+  "getSupplyDesc": "输入地址，触发DIS申领。如果该地址有任何可申领的DIS，则在提交时将向其发送代币。",
   "walletAddress": "钱包地址",
   "noSupply": "该地址没有可用的申领",
   "receive": "领取",
@@ -233,7 +233,7 @@
   "lpRules2": "收益规则：LP挖矿区产币量占总产币量的95%，每个池子间的产币系数取决于该池子前一日的手续费大小，具体可查看“系数”弹窗。",
   "lpRules3": "下架规则：当 LP 流动池连续多天单日交易手续费低于100 USDT时，则会下架LP挖矿区。",
   "lpRules4": "激励对象：新项目上线的第一周平台会给予2-3倍的挖矿系数激励。",
-  "lpRules5": "联系邮箱：OriSwapfan@gmail.com",
+  "lpRules5": "联系邮箱：Diswapfan@gmail.com",
   "singleTitle": "项目上线申请表",
   "singleRules1": "上币规则：点击填写以上申请表，提交项目合约地址、项目介绍、LOGO等主要信息，即可在24小时内上线单币区。",
   "singleRules2": "挖矿规则：同时符合以下 3个规则的池子就可以在次日开通单币挖矿权限",
@@ -257,19 +257,19 @@
   "avaliable": "可用余额: ",
   "nftavaliable": "可用NFT: ",
   "feeTip": "该交易对在下面的时间区间内产生的交易手续费",
-  "dogData": "ORI数据",
-  "dogTotalSupply": "ORI总供应量",
-  "dogTotalDestory": "ORI总销毁量",
-  "dogNewBlock": "新ORI/区块",
+  "dogData": "DIS数据",
+  "dogTotalSupply": "DIS总供应量",
+  "dogTotalDestory": "DIS总销毁量",
+  "dogNewBlock": "新DIS/区块",
   "weekOfRewardAmount": "本周待奖励金额",
-  "stakeLockInfo": "每次进行ORI质押锁仓期为30天",
-  "dogeEarn": "ORIE 收益",
+  "stakeLockInfo": "每次进行DIS质押锁仓期为30天",
+  "dogeEarn": "DISE 收益",
   "stakeRecord": "质押记录",
   "stakeDate": "质押时间",
   "stakeAmount": "质押数量",
   "unlockDate": "解锁时间",
-  "dogRebug": "ORI回购销毁",
-  "rebuyPrice": "ORI实时价格",
+  "dogRebug": "DIS回购销毁",
+  "rebuyPrice": "DIS实时价格",
   "totalRebuyDestory": "总回购销毁数量",
   "stakedAndLocked": "已质押",
   "unLocked": "已解锁",
